// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildExplorePrompt (graphContext) > senza graphContext: prompt byte-identico al riferimento pre-2c (functional + brief) 1`] = `
"PROJECT CONTEXT — use this glossary and terminology consistently; keep names canonical
(prefer the official terms below over synonyms):

PROJECT CONTEXT — use this glossary and terminology consistently:
Glossary:
- Ticket: a unit of work.

You are writing ONE complete, DEEP page of FUNCTIONAL documentation about a single
product capability (a feature area / block of the product).

Unit reference: Search
Page title: Search
Ancestry (root → parent): Architecture Overview
Context from the parent page (for orientation, do not copy verbatim):
The architecture overview of the system.

ABSOLUTE LANGUAGE RULE — this is the most important instruction, do not violate it:
Write in PLAIN, NON-TECHNICAL language, for a business/product reader who does NOT
read code. NEVER mention or expose any technical detail: no file paths, no function,
class, variable, table, endpoint or module NAMES, no code identifiers, no framework
or library names, no programming jargon. If you discover such things in the code,
TRANSLATE them into what they MEAN for the user in business/product terms. A reader
must be able to understand everything without knowing a single line of code.

BE EXHAUSTIVE — enumerate EVERYTHING a user can do in this block:
- every action, operation and task available here;
- every option, variant, mode and configuration, and the choices/inputs each needs;
- what is POSSIBLE here AND, explicitly, what is NOT possible (limits, things you
  cannot do, edge cases that are blocked);
- for each thing, describe the STEPS in words, the inputs/choices involved, and the
  constraints, rules and limits that apply.

GROUND IT IN THE REAL BEHAVIOUR — you are running READ-ONLY in the repository working
directory. INSPECT the relevant code to be accurate and exhaustive about what the
product ACTUALLY does (do not invent features, do not omit real ones), but TRANSLATE
every finding into plain product language. Never leak the technical detail you read;
only its meaning for the user. Use MULTIPLE \`###\` sub-sections; be thorough.

THEN decide the SUB-CAPABILITIES that DESERVE THEIR OWN PAGE: distinct sub-areas of
this capability substantial enough for a dedicated page, each with the source path(s)
that IMPLEMENT it. A minor aspect stays inside THIS page. If the capability is
cohesive and small, it is a LEAF: emit NO children.

OUTPUT CONTRACT — obey this EXACTLY. Emit THREE delimited blocks, each marker ALONE
on its own line, and NOTHING that matters outside them (any text outside is ignored).

1) The page body BETWEEN these markers:
===EXPLORE BODY===
<the full markdown body of THIS page>
===END EXPLORE BODY===
Start the body DIRECTLY with \`###\` sub-sections; do NOT begin with a top-level \`#\`/
\`##\` page title (the title is rendered separately by the UI and would be duplicated).

2) The SUB-UNITS that DESERVE THEIR OWN PAGE (children), one per line, format
\`- <title> :: <paths> :: <why>\` (fields separated by ' :: '; title required). Leave
the block EMPTY (no lines) if this unit is small enough to stay a single page (a leaf):
===CHILDREN===
- <child title> :: <path(s)> :: <why it deserves its own page>
===END CHILDREN===

3) The SOURCE PATHS this page covers, one path per line:
===SOURCE PATHS===
- <path>
===END SOURCE PATHS===

ANTI-META RULES: write ONLY the documentation. Do NOT save anything to any file, do
NOT mention "the plan file", files or plans, and do NOT add meta-commentary,
preamble or closing remarks such as "the documentation page is…", "I now have…",
"here is the markdown" or "let me know if…". Do not wrap the body in a code fence."
`;

exports[`buildExplorePrompt (graphContext) > senza graphContext: prompt byte-identico al riferimento pre-2c (technical) 1`] = `
"You are writing ONE deep page of TECHNICAL documentation about a single code unit of
a software repository, for developers. You are running READ-ONLY in the repository
working directory: READ the relevant code to be accurate — ground everything in what
the code ACTUALLY does, do not invent.

Unit reference: apps/worker
Page title: Worker
Ancestry (root → parent): Architecture Overview
Context from the parent page (for orientation, do not copy verbatim):
The architecture overview of the system.

DOCUMENT THIS UNIT DEEPLY:
- what it IS and its responsibilities (the role it plays in the system);
- its key files, modules, public API/surface and important types;
- HOW IT WORKS: the main data/control flows, key algorithms or mechanisms, and how
  it relates to the units it depends on or collaborates with;
- important implementation details, invariants and gotchas.
Use MULTIPLE \`###\` sub-sections; be thorough and concrete.

THEN decide the SUB-UNITS that DESERVE THEIR OWN PAGE: the natural sub-decomposition
of this unit (sub-modules, major files or subsystems substantial enough to warrant a
dedicated page). A minor part stays inside THIS page — do NOT split trivially. If the
unit is cohesive and small, it is a LEAF: emit NO children.

OUTPUT CONTRACT — obey this EXACTLY. Emit THREE delimited blocks, each marker ALONE
on its own line, and NOTHING that matters outside them (any text outside is ignored).

1) The page body BETWEEN these markers:
===EXPLORE BODY===
<the full markdown body of THIS page>
===END EXPLORE BODY===
Start the body DIRECTLY with \`###\` sub-sections; do NOT begin with a top-level \`#\`/
\`##\` page title (the title is rendered separately by the UI and would be duplicated).

2) The SUB-UNITS that DESERVE THEIR OWN PAGE (children), one per line, format
\`- <title> :: <paths> :: <why>\` (fields separated by ' :: '; title required). Leave
the block EMPTY (no lines) if this unit is small enough to stay a single page (a leaf):
===CHILDREN===
- <child title> :: <path(s)> :: <why it deserves its own page>
===END CHILDREN===

3) The SOURCE PATHS this page covers, one path per line:
===SOURCE PATHS===
- <path>
===END SOURCE PATHS===

ANTI-META RULES: write ONLY the documentation. Do NOT save anything to any file, do
NOT mention "the plan file", files or plans, and do NOT add meta-commentary,
preamble or closing remarks such as "the documentation page is…", "I now have…",
"here is the markdown" or "let me know if…". Do not wrap the body in a code fence."
`;
